MCA Dev/src/objects/Stips__c.object
<CustomObject>
    <fields>
        <fullName>Attachments_IDs__c</fullName>
        <description>Used to store the Ids of attachments records.</description>
        <label>Attachments IDs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Stips__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c ,&apos;Completed&apos;),ISPICKVAL(Status__c ,&apos;Cancelled&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Stip?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Items_Needed</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recv_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recv&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <label>Requested by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipName>Items_Needed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Balance</label>
        <referenceTo>Loan_Balance__c</referenceTo>
        <relationshipLabel>Stips</relationshipLabel>
        <relationshipName>Stips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestMultiselectpicklist__c</fullName>
        <label>TestMultiselectpicklist</label>
        <picklist>
            <picklistValues>
                <fullName>abc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>xyz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pqr</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Test_text_area__c</fullName>
        <label>Test text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stips</label>
    <nameField>
        <label>Stip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>